--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,22 @@
 <!DOCTYPE html>
-<html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./favicon/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./favicon/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./favicon/favicon-16x16.png"
-		/>
-		<title>Webpack study</title>
-	</head>
-	<body>
-		<div class="container">
-			<h1>Webpack Study</h1>
-			<hr />
-			<div class="logo"></div>
-			<hr />
-			<input class="placeholderTest" type="text" placeholder="test text" />
-			<hr />
-			<pre></pre>
-		</div>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <main id="app">
+        <h1>Главная страница</h1>
+    </main>
+    <!-- <p><a href="#/users/" data-href="#/users/" onclick="locationResolver(this.dataset.href)">Пользователи</a></p>
+    <p><a href="#/login/" data-href="#/login/" onclick="locationResolver(this.dataset.href)">Логин</a></p>
+    <p><a href="#/" data-href="#/" onclick="locationResolver(this.dataset.href)">Главная</a></p> -->
+
+		<p><a href="#/users/" data-href="#/users/">Пользователи</a></p>
+    <!-- <p><a href="#/login/" data-href="#/login/" onclick="locationResolver(this.dataset.href)">Логин</a></p>
+    <p><a href="#/" data-href="#/" onclick="locationResolver(this.dataset.href)">Главная</a></p> -->
+
+</body>
+
 </html>
